welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:10: error: ')' expected but integer literal found.
	if(nbBiscuit = < 20 ){
                         ^Balin:32: error: illegal start of simple expression
} 
^