welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();
while(estFaceMur==false){
	var nbBiscuit = 0 ;
	if (estSurBiscuit==true){
		nbBiscuit = nbBiscuit + 1 ;
	}

	if(nbBiscuit = < 20 ){
	while(estSurBiscuit==false){
     	avance();
      }
     while(estSurBiscuit==true){
	prendBiscuit();
	droite();
	droite();
	for (k<-1 to 5 ) {
		avance();
	}
	poseBiscuit();
	droite();
	droite(); 
	avance();	

	if (nbBiscuit > 20 ){
		baisseBrosse()
		avance();
	}
}
}
}